:ghost: Test pr67.
Signed-off-by: Jeff Ortel <jortel@redhat.com>

--- a/resources/rulesets/technology-usage/22-javaee-technology-usage.windup.yaml
+++ b/resources/rulesets/technology-usage/22-javaee-technology-usage.windup.yaml
@@ -1,4 +1,5 @@
 - customVariables: []
+  description: Java EE Batch API
   labels:
   - konveyor.io/include=always
   links: []
@@ -13,6 +14,7 @@
         "": http://xmlns.jcp.org/xml/ns/javaee
       xpath: //*[local-name() = 'batch-artifacts']
 - customVariables: []
+  description: Java EE Batch
   labels:
   - konveyor.io/include=always
   links: []
@@ -32,6 +34,7 @@
           "": http://xmlns.jcp.org/xml/ns/javaee
         xpath: //*[local-name() = 'job']
 - customVariables: []
+  description: Java EE Batch API
   labels:
   - konveyor.io/include=always
   links: []
@@ -44,6 +47,7 @@
     builtin.hasTags:
     - Java EE Batch API
 - customVariables: []
+  description: Java EE Batch
   labels:
   - konveyor.io/include=always
   links: []
@@ -56,6 +60,7 @@
     builtin.hasTags:
     - Java EE Batch
 - customVariables: []
+  description: JavaEE javax
   labels:
   - konveyor.io/include=always
   links: []
@@ -71,6 +76,7 @@
         location: PACKAGE
         pattern: javax.inject*
 - customVariables: []
+  description: JavaEE Jakarta
   labels:
   - konveyor.io/include=always
   links: []
@@ -86,6 +92,7 @@
         location: PACKAGE
         pattern: jakarta.inject*
 - customVariables: []
+  description: JavaEE
   labels:
   - konveyor.io/include=always
   links: []
@@ -98,6 +105,7 @@
     builtin.hasTags:
     - CDI
 - customVariables: []
+  description: Java EE JSON-P
   labels:
   - konveyor.io/include=always
   links: []
@@ -109,6 +117,7 @@
       location: PACKAGE
       pattern: javax.json*
 - customVariables: []
+  description: Java EE JSON-P
   labels:
   - konveyor.io/include=always
   links: []
@@ -256,6 +265,7 @@
       location: IMPORT
       pattern: javax.json.bind*
 - customVariables: []
+  description: JACC
   labels:
   - konveyor.io/include=always
   links: []
@@ -268,6 +278,7 @@
     builtin.hasTags:
     - JACC
 - customVariables: []
+  description: MEJB
   labels:
   - konveyor.io/include=always
   links: []
@@ -280,6 +291,7 @@
     builtin.hasTags:
     - MEJB
 - customVariables: []
+  description: EAR
   labels:
   - konveyor.io/include=always
   links: []
@@ -292,6 +304,7 @@
     builtin.hasTags:
     - EAR
 - customVariables: []
+  description: WS Metadata
   labels:
   - konveyor.io/include=always
   links: []
@@ -304,6 +317,7 @@
     builtin.hasTags:
     - WS Metadata
 - customVariables: []
+  description: Common Annotations
   labels:
   - konveyor.io/include=always
   links: []
@@ -316,6 +330,7 @@
     builtin.hasTags:
     - Common Annotations
 - customVariables: []
+  description: JAXB
   labels:
   - konveyor.io/include=always
   links: []
@@ -328,6 +343,7 @@
     builtin.hasTags:
     - JAXB
 - customVariables: []
+  description: JAXR
   labels:
   - konveyor.io/include=always
   links: []
@@ -340,6 +356,7 @@
     builtin.hasTags:
     - JAXR
 - customVariables: []
+  description: Bean Validation
   labels:
   - konveyor.io/include=always
   links: []
@@ -352,6 +369,7 @@
     builtin.hasTags:
     - Bean Validation
 - customVariables: []
+  description: JSON-B
   labels:
   - konveyor.io/include=always
   links: []
@@ -364,6 +382,7 @@
     builtin.hasTags:
     - JSON-B
 - customVariables: []
+  description: Servlet
   labels:
   - konveyor.io/include=always
   links: []
@@ -376,6 +395,7 @@
     builtin.hasTags:
     - Servlet
 - customVariables: []
+  description: JPA Mapping XML
   labels:
   - konveyor.io/include=always
   links: []
@@ -389,6 +409,7 @@
         p: http://xmlns.jcp.org/xml/ns/persistence/orm
       xpath: //p:entity-mappings/@version[matches(self::node(), '(1.0|2.0|2.1|2.2)')]
 - customVariables: []
+  description: JPA Mapping XML
   labels:
   - konveyor.io/include=always
   links: []
@@ -402,6 +423,7 @@
         p: https://jakarta.ee/xml/ns/persistence/orm
       xpath: //p:entity-mappings/@version[matches(self::node(), '(3.0|3.1)')]
 - customVariables: []
+  description: CDI XML
   labels:
   - konveyor.io/include=always
   links: []
@@ -415,6 +437,7 @@
         p: http://xmlns.jcp.org/xml/ns/javaee
       xpath: //p:beans/@version[matches(self::node(), '(1.0|1.1|2.0)')]
 - customVariables: []
+  description: CDI XML
   labels:
   - konveyor.io/include=always
   links: []
@@ -428,6 +451,7 @@
         p: https://jakarta.ee/xml/ns/jakartaee
       xpath: //p:beans/@version[matches(self::node(), '(3.0|4.0)')]
 - customVariables: []
+  description: Java EE XML
   labels:
   - konveyor.io/include=always
   links: []
@@ -441,6 +465,7 @@
         p: http://java.sun.com/xml/ns/javaee
       xpath: //p:application/@version[matches(self::node(), '(5|6)')]
 - customVariables: []
+  description: Java EE XML
   labels:
   - konveyor.io/include=always
   links: []
@@ -454,6 +479,7 @@
         p: http://xmlns.jcp.org/xml/ns/javaee
       xpath: //p:application/@version[matches(self::node(), '(7|8)')]
 - customVariables: []
+  description: Jakarta EE XML
   labels:
   - konveyor.io/include=always
   links: []
@@ -467,6 +493,7 @@
         p: https://jakarta.ee/xml/ns/jakartaee
       xpath: //p:application/@version[matches(self::node(), '(9|10)')]
 - customVariables: []
+  description: Java EE Client XML
   labels:
   - konveyor.io/include=always
   links: []
@@ -480,6 +507,7 @@
         p: http://java.sun.com/xml/ns/javaee
       xpath: //p:application-client/@version[matches(self::node(), '(5|6)')]
 - customVariables: []
+  description: Java EE Client XML
   labels:
   - konveyor.io/include=always
   links: []
@@ -493,6 +521,7 @@
         p: http://xmlns.jcp.org/xml/ns/javaee
       xpath: //p:application-client/@version[matches(self::node(), '(7|8)')]
 - customVariables: []
+  description: Jakarta EE Client XML
   labels:
   - konveyor.io/include=always
   links: []
@@ -506,6 +535,7 @@
         p: https://jakarta.ee/xml/ns/jakartaee
       xpath: //p:application-client/@version[matches(self::node(), '(9|10)')]
 - customVariables: []
+  description: Connector XML
   labels:
   - konveyor.io/include=always
   links: []
@@ -519,6 +549,7 @@
         p: http://java.sun.com/xml/ns/javaee
       xpath: //p:connector/@version[matches(self::node(), '(1.6)')]
 - customVariables: []
+  description: Connector XML
   labels:
   - konveyor.io/include=always
   links: []
@@ -532,6 +563,7 @@
         p: http://xmlns.jcp.org/xml/ns/javaee
       xpath: //p:connector/@version[matches(self::node(), '(1.7)')]
 - customVariables: []
+  description: Connector XML
   labels:
   - konveyor.io/include=always
   links: []
@@ -545,6 +577,7 @@
         p: https://jakarta.ee/xml/ns/jakartaee
       xpath: //p:connector/@version[matches(self::node(), '(2.0|2.1)')]
 - customVariables: []
+  description: JSF XML
   labels:
   - konveyor.io/include=always
   links: []
@@ -558,6 +591,7 @@
         p: http://java.sun.com/xml/ns/javaee
       xpath: //p:faces-config/@version[matches(self::node(), '(1.2|2.0)')]
 - customVariables: []
+  description: JSF XML
   labels:
   - konveyor.io/include=always
   links: []
@@ -571,6 +605,7 @@
         p: http://xmlns.jcp.org/xml/ns/javaee
       xpath: //p:faces-config/@version[matches(self::node(), '(2.2|2.3)')]
 - customVariables: []
+  description: JSF XML
   labels:
   - konveyor.io/include=always
   links: []
@@ -584,6 +619,7 @@
         p: https://jakarta.ee/xml/ns/jakartaee
       xpath: //p:faces-config/@version[matches(self::node(), '(3.0|4.0)')]
 - customVariables: []
+  description: WebServices XML
   labels:
   - konveyor.io/include=always
   links: []
@@ -597,6 +633,7 @@
         p: http://java.sun.com/xml/ns/javaee
       xpath: //p:webservices/@version[matches(self::node(), '(1.2|1.3)')]
 - customVariables: []
+  description: WebServices XML
   labels:
   - konveyor.io/include=always
   links: []
@@ -610,6 +647,7 @@
         p: http://xmlns.jcp.org/xml/ns/javaee
       xpath: //p:webservices/@version[matches(self::node(), '(1.4)')]
 - customVariables: []
+  description: WebServices XML
   labels:
   - konveyor.io/include=always
   links: []
@@ -623,6 +661,7 @@
         p: https://jakarta.ee/xml/ns/jakartaee
       xpath: //p:webservices/@version[matches(self::node(), '(2.0)')]
 - customVariables: []
+  description: JPA Mapping XML
   labels:
   - konveyor.io/include=always
   links: []
@@ -635,6 +674,7 @@
     builtin.hasTags:
     - JPA Mapping XML
 - customVariables: []
+  description: CDI XML
   labels:
   - konveyor.io/include=always
   links: []
@@ -647,6 +687,7 @@
     builtin.hasTags:
     - CDI XML
 - customVariables: []
+  description: Java EE XML
   labels:
   - konveyor.io/include=always
   links: []
@@ -659,6 +700,7 @@
     builtin.hasTags:
     - Java EE XML
 - customVariables: []
+  description: Jakarta EE XML
   labels:
   - konveyor.io/include=always
   links: []
@@ -671,6 +713,7 @@
     builtin.hasTags:
     - Jakarta EE XML
 - customVariables: []
+  description: Java EE Client XML
   labels:
   - konveyor.io/include=always
   links: []
@@ -683,6 +726,7 @@
     builtin.hasTags:
     - Java EE Client XML
 - customVariables: []
+  description: Jakarta EE Client XML
   labels:
   - konveyor.io/include=always
   links: []
@@ -695,6 +739,7 @@
     builtin.hasTags:
     - Jakarta EE Client XML
 - customVariables: []
+  description: Connector XML
   labels:
   - konveyor.io/include=always
   links: []
@@ -707,6 +752,7 @@
     builtin.hasTags:
     - Connector XML
 - customVariables: []
+  description: JSF XML
   labels:
   - konveyor.io/include=always
   links: []
@@ -719,6 +765,7 @@
     builtin.hasTags:
     - JSF XML
 - customVariables: []
+  description: WebServices XML
   labels:
   - konveyor.io/include=always
   links: []
