--- a/resources/rulesets/technology-usage/11-non-xml-rules-technology-usage.rhamt.yaml
+++ b/resources/rulesets/technology-usage/11-non-xml-rules-technology-usage.rhamt.yaml
@@ -1,4 +1,5 @@
 - customVariables: []
+  description: Non-XML EJB
   labels:
   - konveyor.io/include=always
   links: []
@@ -11,6 +12,7 @@
     builtin.hasTags:
     - EJB XML
 - customVariables: []
+  description: Hibernate Cfg
   labels:
   - konveyor.io/include=always
   links: []
@@ -23,6 +25,7 @@
     builtin.hasTags:
     - Hibernate Cfg
 - customVariables: []
+  description: Hibernate Mapping
   labels:
   - konveyor.io/include=always
   links: []
@@ -35,6 +38,7 @@
     builtin.hasTags:
     - Hibernate Mapping
 - customVariables: []
+  description: JBoss EJB XML
   labels:
   - konveyor.io/include=always
   links: []
@@ -47,6 +51,7 @@
     builtin.hasTags:
     - JBoss EJB XML
 - customVariables: []
+  description: JBoss Web XML
   labels:
   - konveyor.io/include=always
   links: []
@@ -59,6 +64,7 @@
     builtin.hasTags:
     - JBoss Web XML
 - customVariables: []
+  description: JDBC
   labels:
   - konveyor.io/include=always
   links: []
@@ -71,6 +77,7 @@
     builtin.hasTags:
     - JDBC
 - customVariables: []
+  description: Non-XML JPA
   labels:
   - konveyor.io/include=always
   links: []
@@ -83,6 +90,7 @@
     builtin.hasTags:
     - JPA XML
 - customVariables: []
+  description: Orion EJB XML
   labels:
   - konveyor.io/include=always
   links: []
@@ -95,6 +103,7 @@
     builtin.hasTags:
     - Orion EJB XML
 - customVariables: []
+  description: Orion Web XML
   labels:
   - konveyor.io/include=always
   links: []
@@ -107,6 +116,7 @@
     builtin.hasTags:
     - Orion Web XML
 - customVariables: []
+  description: Properties
   labels:
   - konveyor.io/include=always
   links: []
@@ -119,6 +129,7 @@
     builtin.hasTags:
     - Properties
 - customVariables: []
+  description: Seam
   labels:
   - konveyor.io/include=always
   links: []
@@ -131,6 +142,7 @@
     builtin.hasTags:
     - Seam
 - customVariables: []
+  description: WebLogic Web XML
   labels:
   - konveyor.io/include=always
   links: []
@@ -143,6 +155,7 @@
     builtin.hasTags:
     - WebLogic Web XML
 - customVariables: []
+  description: WebSphere EJB
   labels:
   - konveyor.io/include=always
   links: []
@@ -155,6 +168,7 @@
     builtin.hasTags:
     - WebSphere EJB
 - customVariables: []
+  description: WebSphere EJB Ext
   labels:
   - konveyor.io/include=always
   links: []
@@ -167,6 +181,7 @@
     builtin.hasTags:
     - WebSphere EJB Ext
 - customVariables: []
+  description: WebSphere Web XML
   labels:
   - konveyor.io/include=always
   links: []
@@ -179,6 +194,7 @@
     builtin.hasTags:
     - WebSphere Web XML
 - customVariables: []
+  description: WebSphere WS Binding
   labels:
   - konveyor.io/include=always
   links: []
@@ -191,6 +207,7 @@
     builtin.hasTags:
     - WebSphere WS Binding
 - customVariables: []
+  description: WebSphere WS Extension
   labels:
   - konveyor.io/include=always
   links: []
