--- a/resources/rulesets/technology-usage/34-database-technology-usage.windup.yaml
+++ b/resources/rulesets/technology-usage/34-database-technology-usage.windup.yaml
@@ -1,4 +1,5 @@
 - customVariables: []
+  description: JDBC datasources
   labels:
   - konveyor.io/include=always
   links: []
@@ -11,7 +12,12 @@
     java.referenced:
       location: ANNOTATION
       pattern: javax.annotation.sql.DataSourceDefinition
+      annotated:
+        elements:
+          - name: transactional
+            value: false
 - customVariables: []
+  description: JDBC XA datasources
   labels:
   - konveyor.io/include=always
   links: []
@@ -24,7 +30,12 @@
     java.referenced:
       location: ANNOTATION
       pattern: javax.annotation.sql.DataSourceDefinition
+      annotated:
+        elements:
+          - name: transactional
+            value: false
 - customVariables: []
+  description: JPA Entities
   labels:
   - konveyor.io/include=always
   links: []
@@ -45,6 +56,7 @@
         filePattern: .*\.xml
         pattern: https://jakarta.ee/xml/ns/persistence
 - customVariables: []
+  description: JPA Queries
   labels:
   - konveyor.io/include=always
   links: []
@@ -86,6 +98,7 @@
         location: ANNOTATION
         pattern: jakarta.persistence.DiscriminatorValue
 - customVariables: []
+  description: Persistence Units
   labels:
   - konveyor.io/include=always
   links: []
@@ -98,6 +111,7 @@
     builtin.file:
       pattern: persistence\.xml
 - customVariables: []
+  description: HSQLDB Driver
   labels:
   - konveyor.io/include=always
   links: []
@@ -110,6 +124,7 @@
     builtin.hasTags:
     - HSQLDB Driver
 - customVariables: []
+  description: MySQL Driver
   labels:
   - konveyor.io/include=always
   links: []
@@ -122,6 +137,7 @@
     builtin.hasTags:
     - MySQL Driver
 - customVariables: []
+  description: Derby Driver
   labels:
   - konveyor.io/include=always
   links: []
@@ -134,6 +150,7 @@
     builtin.hasTags:
     - Derby Driver
 - customVariables: []
+  description: PostgreSQL Driver
   labels:
   - konveyor.io/include=always
   links: []
@@ -146,6 +163,7 @@
     builtin.hasTags:
     - PostgreSQL Driver
 - customVariables: []
+  description: H2 Driver
   labels:
   - konveyor.io/include=always
   links: []
@@ -158,6 +176,7 @@
     builtin.hasTags:
     - H2 Driver
 - customVariables: []
+  description: Microsoft SQL Driver
   labels:
   - konveyor.io/include=always
   links: []
@@ -170,6 +189,7 @@
     builtin.hasTags:
     - Microsoft SQL Driver
 - customVariables: []
+  description: SQLite Driver
   labels:
   - konveyor.io/include=always
   links: []
@@ -182,6 +202,7 @@
     builtin.hasTags:
     - SQLite Driver
 - customVariables: []
+  description: Oracle DB Driver
   labels:
   - konveyor.io/include=always
   links: []
@@ -194,6 +215,7 @@
     builtin.hasTags:
     - Oracle DB Driver
 - customVariables: []
+  description: Cassandra Client
   labels:
   - konveyor.io/include=always
   links: []
@@ -206,6 +228,7 @@
     builtin.hasTags:
     - Cassandra Client
 - customVariables: []
+  description: Axion Driver
   labels:
   - konveyor.io/include=always
   links: []
@@ -218,6 +241,7 @@
     builtin.hasTags:
     - Axion Driver
 - customVariables: []
+  description: MckoiSQLDB Driver
   labels:
   - konveyor.io/include=always
   links: []
@@ -230,6 +254,7 @@
     builtin.hasTags:
     - MckoiSQLDB Driver
 - customVariables: []
+  description: MongoDB Client
   labels:
   - konveyor.io/include=always
   links: []
@@ -242,6 +267,7 @@
     builtin.hasTags:
     - MongoDB Client
 - customVariables: []
+  description: Spring Data
   labels:
   - konveyor.io/include=always
   links: []
@@ -254,6 +280,7 @@
     builtin.hasTags:
     - Spring Data
 - customVariables: []
+  description: Morphia
   labels:
   - konveyor.io/include=always
   links: []
@@ -266,6 +293,7 @@
     builtin.hasTags:
     - Morphia
 - customVariables: []
+  description: LevelDB Client
   labels:
   - konveyor.io/include=always
   links: []
@@ -278,6 +306,7 @@
     builtin.hasTags:
     - LevelDB Client
 - customVariables: []
+  description: Apache HBase Client
   labels:
   - konveyor.io/include=always
   links: []
@@ -290,6 +319,7 @@
     builtin.hasTags:
     - Apache HBase Client
 - customVariables: []
+  description: Apache Accumulo Client
   labels:
   - konveyor.io/include=always
   links: []
@@ -302,6 +332,7 @@
     builtin.hasTags:
     - Apache Accumulo Client
 - customVariables: []
+  description: Spring Data JPA
   labels:
   - konveyor.io/include=always
   links: []
@@ -314,6 +345,7 @@
     builtin.hasTags:
     - Spring Data JPA
 - customVariables: []
+  description: MariaDB Driver
   labels:
   - konveyor.io/include=always
   links: []
