Update global-ci.yaml just tier0
Signed-off-by: Marek Aufart <maufart@redhat.com>

--- a/.github/workflows/global-ci.yaml
+++ b/.github/workflows/global-ci.yaml
@@ -45,3 +45,4 @@ jobs:
       operator_bundle: quay.io/konveyor/tackle2-operator-bundle:release-0.7
       tackle_hub: ttl.sh/konveyor-hub-${{ github.sha }}:4h
       api_tests_ref: ${{ github.event_name == 'push' && github.ref || github.base_ref }}
+      api_tests_tiers: make test-tier0
