--- a/resources/generators.yaml
+++ b/resources/generators.yaml
@@ -3,8 +3,8 @@ version: 1
 items:
     - uuid: 8b25ed8e-f55d-404f-a5d2-819e698b2549
       kind: helm
-      name: Openshift
-      description: Cloud Foundry => Openshift.
+      name: CloudFoundry-Openshift
+      description: Generate openshift assets using a Cloud Foundry application manifest.
       repository:
         kind: git
         url: https://github.com/konveyor/cf-k8s-helm-chart.git
