:ghost: generator repository v0.1.0. (#85)
* pin generator to v0.1.0.

Signed-off-by: Jeff Ortel <jortel@redhat.com>

* checkpoint

Signed-off-by: Jeff Ortel <jortel@redhat.com>

---------

Signed-off-by: Jeff Ortel <jortel@redhat.com>

--- a/resources/generators.yaml
+++ b/resources/generators.yaml
@@ -8,7 +8,7 @@ items:
       repository:
         kind: git
         url: https://github.com/konveyor/cf-k8s-helm-chart.git
-        branch: ""
+        branch: "v0.1.0"
         tag: ""
         path: "java-backend"
       params: {}
