Add Quarkus migration rules for JNDI, transactions, and JPA
Signed-off-by: Jeff Ortel <jortel@redhat.com>

--- a/resources/generators.yaml
+++ b/resources/generators.yaml
@@ -8,8 +8,8 @@ items:
       repository:
         kind: git
         url: https://github.com/konveyor/cf-k8s-helm-chart.git
-        branch: "v0.1.0"
+        branch: v0.1.0
         tag: ""
-        path: "java-backend"
+        path: java-backend
       params: {}
       values: {}
