Pass matching API tests ref to CI
This should fix running main branch API tests on release-X.Y branches of
seeds.

Signed-off-by: Marek Aufart <maufart@redhat.com>

--- a/.github/workflows/global-ci.yaml
+++ b/.github/workflows/global-ci.yaml
@@ -43,3 +43,4 @@ jobs:
     uses: konveyor/ci/.github/workflows/global-ci-bundle.yml@main
     with:
       tackle_hub: ttl.sh/konveyor-hub-${{ github.sha }}:4h
+      api_tests_ref: ${{ github.event_name == 'push' && github.ref || github.base_ref }}
